[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-code-quality-pylint"
version = "1.0.0"
description = "Custom Pylint plugin and configuration for enterprise-quality assurance"
authors = [{name = "Your Team", email = "devops@example.com"}]
license = {text = "MIT"}
dependencies = []
